# fastapi-ocr

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: dependencies.py  main.py
app/internal/: admin.py
app/routers/: extract.py  ocr.py
app/services/: coe_scanner.py  extract_info.py  ocr.py
